--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# NodeJS
+node_modules/
+package-lock.json
+
 # User-specific files
 *.rsuser
 *.suo
